// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contactFormAutoReplyEmail > optional phone field handling > should not show phone if not provided 1`] = `
"
    <!DOCTYPE html>
    <html>
    <head>
      <style>
        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #333; }
        .container { max-width: 600px; margin: 0 auto; padding: 20px; }
        .header { background: #2563eb; color: white; padding: 20px; text-align: center; border-radius: 8px 8px 0 0; }
        .content { background: #f9fafb; padding: 20px; border-radius: 0 0 8px 8px; }
        .highlight { background: #dbeafe; padding: 15px; border-radius: 8px; margin: 15px 0; }
        .footer { text-align: center; padding: 20px; color: #666; font-size: 14px; }
      </style>
    </head>
    <body>
      <div class="container">
        <div class="header">
          <h1>Message Received</h1>
        </div>
        <div class="content">
          <p>Hi Jennifer Smith,</p>
          <p>Thank you for reaching out to <strong>Tropical Dive Paradise</strong>. We've received your message and will get back to you as soon as possible.</p>

          <div class="highlight">
            <p><strong>We typically respond within 24 hours.</strong></p>
          </div>

          <p>In the meantime, if you need immediate assistance, please feel free to contact us directly:</p>
          <ul>
            <li>Email: <a href="mailto:info@tropicaldive.com">info@tropicaldive.com</a></li>
            
          </ul>

          <p>Best regards,<br>Tropical Dive Paradise Team</p>
        </div>
        <div class="footer">
          <p>Tropical Dive Paradise • Powered by DiveStreams</p>
        </div>
      </div>
    </body>
    </html>
  "
`;

exports[`contactFormAutoReplyEmail > optional phone field handling > should not show phone if not provided 2`] = `
"
Thank you for contacting Tropical Dive Paradise

Hi Jennifer Smith,

Thank you for reaching out to Tropical Dive Paradise. We've received your message and will get back to you as soon as possible.

We typically respond within 24 hours.

In the meantime, if you need immediate assistance, please feel free to contact us directly:

Email: info@tropicaldive.com


Best regards,
Tropical Dive Paradise Team

Tropical Dive Paradise • Powered by DiveStreams
  "
`;

exports[`contactFormAutoReplyEmail > should generate correct output for default data 2`] = `
"
    <!DOCTYPE html>
    <html>
    <head>
      <style>
        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #333; }
        .container { max-width: 600px; margin: 0 auto; padding: 20px; }
        .header { background: #2563eb; color: white; padding: 20px; text-align: center; border-radius: 8px 8px 0 0; }
        .content { background: #f9fafb; padding: 20px; border-radius: 0 0 8px 8px; }
        .highlight { background: #dbeafe; padding: 15px; border-radius: 8px; margin: 15px 0; }
        .footer { text-align: center; padding: 20px; color: #666; font-size: 14px; }
      </style>
    </head>
    <body>
      <div class="container">
        <div class="header">
          <h1>Message Received</h1>
        </div>
        <div class="content">
          <p>Hi Jennifer Smith,</p>
          <p>Thank you for reaching out to <strong>Tropical Dive Paradise</strong>. We've received your message and will get back to you as soon as possible.</p>

          <div class="highlight">
            <p><strong>We typically respond within 24 hours.</strong></p>
          </div>

          <p>In the meantime, if you need immediate assistance, please feel free to contact us directly:</p>
          <ul>
            <li>Email: <a href="mailto:info@tropicaldive.com">info@tropicaldive.com</a></li>
            <li>Phone: <a href="tel:+1-555-987-6543">+1-555-987-6543</a></li>
          </ul>

          <p>Best regards,<br>Tropical Dive Paradise Team</p>
        </div>
        <div class="footer">
          <p>Tropical Dive Paradise • Powered by DiveStreams</p>
        </div>
      </div>
    </body>
    </html>
  "
`;

exports[`contactFormAutoReplyEmail > should generate correct output for default data 3`] = `
"
Thank you for contacting Tropical Dive Paradise

Hi Jennifer Smith,

Thank you for reaching out to Tropical Dive Paradise. We've received your message and will get back to you as soon as possible.

We typically respond within 24 hours.

In the meantime, if you need immediate assistance, please feel free to contact us directly:

Email: info@tropicaldive.com
Phone: +1-555-987-6543

Best regards,
Tropical Dive Paradise Team

Tropical Dive Paradise • Powered by DiveStreams
  "
`;
